--- a/Processing.css
+++ b/Processing.css
@@ -1,3 +1,23 @@
+.popup {
+    display: none;
+    position: absolute;
+    margin-top: -80px;
+    left: 0;
+    width: 100%;
+    height: 115%;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 999;
+  }
+
+  .popup-content {
+    background-color: #fff;
+    width: 350px;
+    margin: 100px auto;
+    padding: 20px;
+    border-radius: 5px;
+    text-align: center;
+  }
+
 *{
     box-sizing: border-box;
     margin: 0;
