--- a/Processing.css
+++ b/Processing.css
@@ -1,10 +1,11 @@
+
 .popup {
     display: none;
-    position: absolute;
-    margin-top: -80px;
+    position: fixed;
+    top: -60px;
     left: 0;
     width: 100%;
-    height: 120%;
+    height: 115%;
     background-color: rgba(0, 0, 0, 0.5);
     z-index: 999;
   }
@@ -18,6 +19,21 @@
     text-align: center;
   }
 
+  .popup-content img {
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    object-fit: cover;
+    margin-bottom: 10px;
+  }
+
+  .popup-content p {
+    margin-bottom: 10px;
+  }
+
+  .popup-content button {
+    margin-top: 10px;
+  }
 *{
     box-sizing: border-box;
     margin: 0;
@@ -69,12 +85,4 @@
 
 td, th{
     text-align: center;
-}
-
-table {
-    border-collapse: collapse;
-}
-
-tr th td {
-    border: 1px solid;
 }
