--- a/Processing.css
+++ b/Processing.css
@@ -1,43 +1,74 @@
-.popup {
-    display: none;
-    position: fixed;
-    top: -60px;
-    left: 0;
-    width: 100%;
-    height: 115%;
-    background-color: rgba(0, 0, 0, 0.5);
-    z-index: 999;
-  }
-
-  .popup-content {
-    background-color: #fff;
-    width: 350px;
-    margin: 100px auto;
-    padding: 20px;
-    border-radius: 5px;
-    text-align: center;
-  }
-
-  .popup-content img {
-    width: 100px;
-    height: 100px;
-    border-radius: 50%;
-    object-fit: cover;
-    margin-bottom: 10px;
-  }
-
-  .popup-content p {
-    margin-bottom: 10px;
-  }
-
-  .popup-content button {
-    margin-top: 10px;
-  }
 *{
     box-sizing: border-box;
     margin: 0;
     padding: 0;
 }
+
+/* Overlay */
+#overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5); /* Background with opacity */
+    display: none;
+    z-index: 9999;
+}
+  
+/* Popup */
+.popup {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    height: 80%;
+    width: 40%;
+    transform: translate(-50%, -50%);
+    background-color: #fff;
+    padding: 20px;
+    border-radius: 5px;
+    display: none;
+    overflow: auto;
+    z-index: 10000;
+}
+    
+.popup form {
+    margin-bottom: 10px;
+}
+  
+.popup label {
+    display: block;
+    margin-bottom: 5px;
+}
+  
+  .popup input,
+  .popup select {
+    width: 100%;
+    padding: 5px;
+  }
+  
+  .popup button {
+    padding: 8px 16px;
+    background-color: #2a88cb;
+    color: #fff;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+  }
+  
+  .popup button:hover {
+    background-color: #1a5f8b;
+  }
+  
+  .popup button:focus {
+    outline: none;
+    box-shadow: 0 0 0 0.25rem rgba(42, 136, 203, 0.5);
+  }
+  
+  .popup button:active {
+    background-color: #14456f;
+  }
+  
 
 /* Search */
 .search-item button{
@@ -59,33 +90,6 @@
     box-shadow: 0 0 0 0.25rem rgba(42, 136, 203, 0.5)
 }
 
-/* Table */
-.table>:not(caption)>*>*{
-    padding: 1rem 1rem;
-}
-
-.table-item-img{
-    width: 70px;
-}
-
-.table-item-set,
-.table-item-remove,
-.table-item-visible,
-.table-item-hide{
-    font-size: 20px;
-    padding: 8px;
-}
-
-.table-item-detail,
-.table-item-choose{
-    font-size: 26px;
-    padding: 8px;
-}
-
-td, th{
-    text-align: center;
-}
-
 table {
     border-collapse: collapse;
 }
@@ -94,6 +98,10 @@ tr th td {
     border: 1px solid;
 }
 
-.btn-item-collect a {
+td, th{
+    text-align: center;
+}
+
+.btn-item-collect button {
     margin-right: 10px;
 }
